--- a/style/Style.css
+++ b/style/Style.css
@@ -5,14 +5,17 @@ body{
     background-color: #03071E;
     text-align: center;
 }
-/*
-.bck{
-    background-image: url('medias/nuit étoilée.JPG');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed; 
-}
-*/
+html::-webkit-scrollbar {
+      width: 10px; 
+   }
+html::-webkit-scrollbar-track {
+    background-color: #03071E;
+  }
+
+html::-webkit-scrollbar-thumb {
+    background: #FFBA08;
+    border-radius: 5px;
+  }
 h1,p,a,h2,body{
     color: white;
     font-family: 'Montserrat', sans-serif;
