--- a/style/Photo.css
+++ b/style/Photo.css
@@ -108,7 +108,7 @@ main{
     margin-bottom: 10vw;
 }
 footer {
-    background-color: #370617;
+    background-color: #050C33;
     height: 14rem;
     bottom: 0;
     position: relative;
