--- a/style/test.css
+++ b/style/test.css
@@ -15,7 +15,7 @@ html::-webkit-scrollbar-thumb {
     border-radius: 5px;
   }
 body{
-    background-image: url(../medias/nuit%20%C3%A9toil%C3%A9e.JPG);
+    background-image: url(../medias/Arc en ciel.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -23,7 +23,7 @@ body{
 }
 @media only screen and (max-width: 767px) {
     body {
-    background-image: url(../medias/nuit%20%C3%A9toil%C3%A9e.JPG);
+    background-image: url(../medias/Arc en ciel.jpg);
   }
 }
 h1,p,a,h3{
@@ -96,7 +96,6 @@ h1{
     overflow: visible;
     z-index: 100;
     padding: 10px;
-/*    padding-left: 10px;*/
     color: white;
 }
 .Titre{
